# OTLMOW-PostenMapping

./: .gitattributes  .gitignore  PostenMappingDict.py  README.md  demo_BIM4Infra.ipynb  main.py  postenmapping_incl_visualisation.ipynb  pyproject.toml  pysize.py  requirements.txt  start_bestand.xlsx  start_bestand_demo_bim4infra.xlsx  templates-Mapping_Artefact-20241127.db  templates-Mapping_Artefact-versie WV-beschermbuis-2024-10-11T12_00_06.604805Z.db  templates-Mapping_Artefact-versie kris 0.1.db  type_templates_demo.ipynb
.github/workflows/: coverage.yml  release.yml  unittest.yml
SampleCode/: create_dict_from_artefact.py  find_mappings_by_instanced_asset.py
UnitTests/: .coverage  MappingConverter_test.py  PostAssetFactoryTests.py  PostAssetFactory_test.py  PostenMappingDict.py  PostenMapping_template_202411.db  PostenMapping_template_202411Dict.py  TestModelMappingDict.py  output.xlsx  run_all_tests_html_github.py  start_bestand.xlsx
UnitTests/htmlcov/: MappingConverter_test_py.html  PostAssetFactory_test_py.html  PostenMappingDict_py.html  TestModelMappingDict_py.html  __init___py.html  class_index.html  d_0ce49d37f04620d8_MappingConverter_py.html  d_0ce49d37f04620d8_PostAssetFactory_py.html  d_0ce49d37f04620d8_PostenMappingDict_py.html  d_0ce49d37f04620d8_SQLDbReader_py.html  d_0ce49d37f04620d8___init___py.html  d_c6bab78a4f2cae39_Base_py.html  d_c6bab78a4f2cae39_GeneralInfo_py.html  d_c6bab78a4f2cae39_TemplateMapping_py.html  d_fccf8fc047997753_PostenMappingDict_py.html  function_index.html  index.html  status.json  z_0ce49d37f04620d8_MappingConverter_py.html  z_0ce49d37f04620d8_PostAssetFactory_py.html  z_0ce49d37f04620d8_PostenMappingTemplateModifier_py.html  z_0ce49d37f04620d8_SQLDbReader_py.html  z_0ce49d37f04620d8___init___py.html  z_3f25a96d964ccf10_DtcIdentificator_py.html  z_3f25a96d964ccf10_DtcTestComplexType2_py.html  z_3f25a96d964ccf10_DtcTestComplexType_py.html  z_3f25a96d964ccf10_DteTestEenvoudigType_py.html  z_3f25a96d964ccf10_DtuTestUnionType_py.html  z_3f25a96d964ccf10_KlAIMToestand_py.html  z_3f25a96d964ccf10_KlTestKeuzelijst_py.html  z_3f25a96d964ccf10_KwantWrdInMaand_py.html  z_3f25a96d964ccf10_KwantWrdTest_py.html  z_55c307d95fa9f59b_OTLObject_py.html  z_8240eb8f406273ae_AllCasesTestClass_py.html  z_8240eb8f406273ae_Bevestiging_py.html  z_ba417da637433397_AIMDBStatus_py.html  z_ba417da637433397_AIMObject_py.html  z_ba417da637433397_AIMToestand_py.html  (+9 more)
demo_bim4infra/: basisimport.xlsx  demo_BIM4Infra.ipynb  demo_BIM4infra_met_visualisatie.ipynb  start_bestand_demo_bim4infra.xlsx
otlmow_postenmapping/: MappingConverter.py  PostAssetFactory.py  PostenMappingDict.py  PostenMappingTemplateModifier.py  SQLDbReader.py
(+6 files in other folders)
