[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_postenmapping"
version = "0.1"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
  'otlmow_converter >= 0.6'
]

[tool.setuptools.packages.find]
include = ["otlmow_postenmapping*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-PostenMapping"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-PostenMapping/issues"
