[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_postenmapping"
version = "0.2"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
  'otlmow_converter >= 1.2',
    'sqlalchemy >= 2.0.35',
]

[tool.setuptools.packages.find]
include = ["otlmow_postenmapping*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-PostenMapping"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-PostenMapping/issues"
